Alpha 16

  * New features
    * Spanish translation (#628)

  * Minor changes and tweaks

  * Fixes
  
  * Script changes

  * Internal changes
    * Improve terrain generation performance


Alpha 15

  * New features
    * Star "terrains". Stars now have complex surface colours and patterns (#567)
    * Assassination missions (#290, #500)
    * Restored "hoop" orbital station (#499, #516)
    * Restored "Panther" ship (#497)
    * "Long Range Cruiser" bulk ship (#626)
    * Big mushroom station with four bays (#530)
    * New futuristic city buildings (#518, #557)
    * Four new ambient music tracks (#543)
    * Ship drives now break down over time and require repairs (#552, #570, #610)
    * Ship landing lights now only flash when landing gear is down or ship is
      docking (#236, #478)
    * Station landing lights now coloured to indicate occupied (red), free
      (orange) and cleared for docking (green) (#4, #489, #498)
    * Romanian, Dutch, Italian and Croatian translations (#565, #571, #573, #593)

  * Minor changes and tweaks
    * Landed and docked ships will no longer cause alerts (#454, #466)
    * Bulk ships are now spawned on game start (#500)
    * Trade ships will now repair damage and replace destroyed equipment (#481)
    * Mushroom station now has ads in bay 2 (#524)
    * Display surface gravity of bodies in system info view (#533)
    * Model fixes: Ship bounding radii, LOD checked and fixed, adverts cleaned
      up and other minor fixes (#530, #542, #556, #515, #72, #582, #613, #614, #620)
    * Support for glowmaps (#557)
    * Terrains. Snow on mountains and polar ice caps. Various optimisations
    * and fixes (#440, #566)

  * Fixes
    * Certain in-game keys will no longer crash when used in the menu (#453, #463)
    * Don't try to save or load game with no filename (#487, #488)
    * Fix set speed scaling when setting a negative set speed (#482)
    * Don't spawn docked trade ships on game start (#495)